# WFC

./: README.md
OverlappingModel/: README.md  index.html  script.js
OverlappingModel2/: README.md  index.html  script.js  style.css
SimpleTiled/: README.md  TODO.md  index.html  script.js  script.ts  style.css
Words/: test.py  wfc_words_overlapping.py  wfc_words_overlapping_no_parsing.py  wfc_words_simple.py
Words/book-database/: bookdb-enhanced.txt  bookdb-large.txt  bookdb.txt  gettysburg.txt  heart-of-darkness.txt  mary-little-lamb.txt  pride-prejudice.txt  test.txt  ulysses.txt
Words/wfc_words/: Cargo.toml
Words/wfc_words/src/: main.rs
WordsSimple/: wfc_words.py
WordsSimple/book-database/: alice.txt  moby-dick.txt  peter-pan.txt  tale-of-cities.txt
wfc/: Cargo.toml
wfc/src/: cmd.rs  consts.rs  main.rs  wfc.rs
