[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.13"
instant = "0.1"
clap = { version = "4.5.17", features = ["derive"] }

rayon = "1.10.0"
rustc-hash = "2.0.0"